# misar_web

./: .gitignore  build.sh  planning.md  pyproject.toml  render.yaml  requirements.txt
src/local-cdn/media/media/: badgers23_24_JusTOa1.csv
src/local-cdn/static/css/: styles.css
src/local-cdn/static/members/: dialog.js
src/misar_web/: manage.py
src/misar_web/home/: admin.py  models.py  urls.py  views.py
src/misar_web/home/migrations/: 0001_initial.py  0002_siteinfo_url.py  0003_remove_siteinfo_url.py  0004_siteinfo_logo.py  0005_alter_siteinfo_logo.py  0006_alter_siteinfo_logo.py  0007_remove_siteinfo_logo_siteinfo_logo_jpg.py  0008_alter_siteinfo_logo_jpg.py  0009_rename_logo_jpg_siteinfo_logo.py  0010_alter_siteinfo_logo.py  0011_alter_siteinfo_logo.py  0012_siteinfo_dispatch_number_siteinfo_mission_statement.py  0013_alter_siteinfo_logo.py  0014_alter_siteinfo_logo.py  0015_alter_siteinfo_logo.py  0016_alter_siteinfo_logo.py  0017_siteinfo_home_page_image.py  0018_siteinfo_alternate_logo.py  0019_siteinfo_donation_link.py  0020_alter_siteinfo_options.py  0021_alter_siteinfo_logo.py  0022_alter_siteinfo_logo.py  0023_alter_siteinfo_logo.py  0024_siteinfo_get_involved_blob.py  0025_remove_siteinfo_get_involved_blob.py  0026_siteinfo_mailing_address_siteinfo_team_email.py  0027_siteinfo_team_goals.py  0028_teamgoals_remove_siteinfo_team_goals.py  0029_alter_teamgoals_options.py  0030_searchspecialty.py  0031_alter_searchspecialty_options.py  0032_remove_siteinfo_mailing_address_and_more.py  0033_siteinfo_about_photo_1_siteinfo_about_photo_2.py  0034_siteinfo_contact_photo_1.py  0035_siteinfo_contact_photo_2.py  0036_siteinfo_about_photo_3.py  0037_siteinfo_donate_photo_1_siteinfo_donate_photo_2_and_more.py  0038_siteinfo_blank_icon.py  0039_searchspecialty_transparent_icon.py  0040_searchspecialty_specialty_photo.py  (+7 more)
src/misar_web/members/: admin.py  forms.py  models.py  urls.py  views.py
src/misar_web/members/migrations/: 0001_initial.py  0002_alter_member_managers_remove_member_country_and_more.py  0003_remove_member_member_since_and_more.py  0004_remove_member_date_of_birth.py  0005_member_website_join_date.py  0006_remove_member_website_join_date_member_date_of_birth.py  0007_alter_member_state_alter_member_zip_code.py  0008_alter_member_options_remove_member_is_admin_and_more.py  0009_memberfile.py  0010_remove_member_state.py  0011_member_member_password.py  0012_alter_member_member_password.py  0013_delete_memberfile.py  0014_memberfile_filesharing.py  0015_remove_memberfile_user.py  0016_alter_memberfile_options_memberfile_file_name_and_more.py  0017_remove_filesharing_recipient_alter_memberfile_file_and_more.py  0018_remove_memberfile_date_created_and_more.py  0019_alter_memberfile_file_name_delete_filesharing.py  0020_alter_memberfile_file.py  0021_alter_memberfile_options_memberfile_current_owner_and_more.py  0023_alter_memberfile_file.py  (+50 more)
src/misar_web/misar_web/: asgi.py  backends.py  settings.py  urls.py  wsgi.py
src/misar_web/tests/: conftest.py  factories.py  test_forms.py
(+43 files in other folders)
