[project]
name = "misar_web"
version = ""
description = ""
authors = [{ name = "Adam K.", email = "arkelly111@gmail.com" }]
dependencies = [
  "django>=4.2.7",
  "pillow>=10.1.0",
  "django-allauth>=0.58.2",
  "django-localflavor>=4.0",
  "crispy-tailwind>=0.5.0",
  "django-guardian>=2.4.0",
  "django-template-partials>=23.4",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
  "django-browser-reload>=1.12.1",
  "django-tailwind>=3.6.0",
  "coverage>=7.4.0",
  "django-stubs>=4.2.6",
  "pytest-django>=4.7.0",
  "pytest-factoryboy>=2.6.0",
  "django-debug-toolbar>=4.2.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "misar_web.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
